<resources>
    <string name="app_name">FisioTech</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_clients">Pacientes</string>
    <string name="menu_gallery">Calendário</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="PACTName">Nome</string>
    <string name="txt_phone">Telefone</string>
    <string name="txt_birth_date">Data de nascimento</string>
    <string name="txt_amount_charged">Valor cobrado (R$)</string>
    <string name="txt_type_charge">Tipo de cobrança</string>
    <string name="txt_type_month">Mensal</string>
    <string name="txt_type_daily">Diária</string>
    <string name="txt_clinical_diagnosis">Diagnóstico clínico</string>
    <string name="txt_physiotherapeutic_diagnosis">Diagnóstico fisioterapêutico</string>
    <string name="txt_objetives">Objetivos</string>
    <string name="txt_treatment_conduct">Conduta de tratamento</string>
    <string name="txt_days_of_service">Dias de atendimento</string>
    <string name="txt_monday">Segunda-feira</string>
    <string name="txt_start_service_time">Hora inicial do atendimento</string>
    <string name="txt_end_service_time">Hora final do atendimento</string>
    <string name="txt_tuesday">Terça feira</string>
    <string name="txt_delete">Apagar</string>
    <string name="txt_client_cad_success">Paciente cadastrado com sucesso</string>
    <string name="txt_client_update_success">Paciente atualizado com sucesso</string>
    <string name="txt_client_remove_success">Paciente apagado com sucesso</string>
    <string name="txt_attendance_remove_success">Atendimento apagado com sucesso</string>
    <string name="txt_attention">Atenção</string>
    <string name="txt_confirmation">Confirmação</string>
    <string name="txt_ok">OK</string>
    <string name="txt_attendances">Atendimentos</string>
    <string name="txt_day">Dia</string>
    <string name="txt_initial_hour">Hora de início</string>
    <string name="txt_end_hour">Hora do fim</string>
    <string name="txt_evolution">Evolução</string>
    <string name="txt_calendar">Calendário</string>
    <string name="txt_wednesday">Quarta-feira</string>
    <string name="txt_thursday">Quinta-feira</string>
    <string name="txt_friday">Sexta-feira</string>
    <string name="txt_saturday">Sábado</string>
    <string name="txt_sunday">Domingo</string>
    <string name="txt_password">Senha</string>
    <string name="txt_login">Login</string>
    <string name="txt_save_credentials">Salvar credenciais</string>
    <string name="txt_fullname">Nome completo</string>
    <string name="txt_mail">E-mail</string>
    <string name="txt_attendances_alert">Receber aviso dos atendimentos</string>
    <string name="txt_edit">Sair</string>
    <string name="txt_exit">Sair</string>
    <string name="txt_loading">Carregando</string>
    <string name="txt_loading_message">Aguarde enquanto carrega os dados...</string>
</resources>