<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_clients">

    <fragment
        android:id="@+id/nav_clients"
        android:name="com.tabaldi.fisiotech.ui.clients.ClientFragment"
        android:label="@string/menu_clients"
        tools:layout="@layout/fragment_client" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.tabaldi.fisiotech.ui.calendar.CalendarFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.tabaldi.fisiotech.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>