<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PACTName" />

        <EditText
            android:id="@+id/txt_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_phone" />

        <EditText
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_birth_date" />

        <EditText
            android:id="@+id/txt_birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_amount_charged" />

        <EditText
            android:id="@+id/txt_amount_charged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_type_charge" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_type_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/txt_type_month" />

            <RadioButton
                android:id="@+id/radio_type_daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_type_daily" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_clinical_diagnosis" />

        <EditText
            android:id="@+id/txt_clinical_diagnosis"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_physiotherapeutic_diagnosis" />

        <EditText
            android:id="@+id/txt_physiotherapeutic_diagnosis"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_objetives" />

        <EditText
            android:id="@+id/txt_objetives"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_treatment_conduct" />

        <EditText
            android:id="@+id/txt_treatment_conduct"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_days_of_service" />

        <!-- Segunda feira -->
        <CheckBox
            android:id="@+id/check_monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_monday" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_start_service_time" />

        <EditText
            android:id="@+id/txt_start_service_time_monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_end_service_time" />

        <EditText
            android:id="@+id/txt_end_service_time_monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <!-- Terça feira -->
        <CheckBox
            android:id="@+id/check_tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_tuesday" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_start_service_time" />

        <EditText
            android:id="@+id/txt_start_service_time_tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_end_service_time" />

        <EditText
            android:id="@+id/txt_end_service_time_tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <!-- Quarta feira -->
        <CheckBox
            android:id="@+id/check_wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_wednesday" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_start_service_time" />

        <EditText
            android:id="@+id/txt_start_service_time_wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_end_service_time" />

        <EditText
            android:id="@+id/txt_end_service_time_wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <!-- Quinta feira -->
        <CheckBox
            android:id="@+id/check_thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_thursday" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_start_service_time" />

        <EditText
            android:id="@+id/txt_start_service_time_thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_end_service_time" />

        <EditText
            android:id="@+id/txt_end_service_time_thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <!-- Sexta feira -->
        <CheckBox
            android:id="@+id/check_friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_friday" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_start_service_time" />

        <EditText
            android:id="@+id/txt_start_service_time_friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_end_service_time" />

        <EditText
            android:id="@+id/txt_end_service_time_friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <!-- Sábado -->
        <CheckBox
            android:id="@+id/check_saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_saturday" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_start_service_time" />

        <EditText
            android:id="@+id/txt_start_service_time_saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_end_service_time" />

        <EditText
            android:id="@+id/txt_end_service_time_saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <!-- Domingo -->
        <CheckBox
            android:id="@+id/check_sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_sunday" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_start_service_time" />

        <EditText
            android:id="@+id/txt_start_service_time_sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_end_service_time" />

        <EditText
            android:id="@+id/txt_end_service_time_sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />
    </LinearLayout>
</ScrollView>